see http://wiki.apache.org/solr/ExtractingRequestHandler

Getting Started
---------------
You will need Solr up and running.  Then, simply add the extraction JAR file, plus the Tika dependencies (in the ./lib folder)
to your Solr Home lib directory.  See http://wiki.apache.org/solr/ExtractingRequestHandler for more details on hooking it in
 and configuring.

 Tika Dependency
 ---------------

Current Version: Tika 0.8 (released 11/07/2010)

$Id:$

================== Release 4.0-dev ==================

(No Changes)

================== Release 3.2-dev ==================

(No Changes)

================== Release 3.1-dev ==================

* SOLR-1902: Upgraded to Tika 0.8 and changed deprecated parse call

* SOLR-1756: The date.format setting causes ClassCastException when enabled and the config code that
  parses this setting does not properly use the same iterator instance. (Christoph Brill, Mark Miller)

* SOLR-18913: Add ICU4j to libs and add tests for Arabic extraction (Robert Muir via gsingers)

* SOLR-1902: Upgraded to Tika 0.8-SNAPSHOT to incorporate passing in Solr's custom ClassLoader (gsingers)

================== Release 1.4.0 ==================

1. SOLR-284:  Added in support for extraction. (Eric Pugh, Chris Harris, gsingers)

2. SOLR-284: Removed "silent success" key generation (gsingers)

3. SOLR-1075: Upgrade to Tika 0.3.  See http://www.apache.org/dist/lucene/tika/CHANGES-0.3.txt (gsingers)

4. SOLR-1128: Added metadata output to "extract only" option.  (gsingers)

5. SOLR-1310: Upgrade to Tika 0.4. Note there are some differences in detecting Languages now.
    See http://www.lucidimagination.com/search/document/d6f1899a85b2a45c/vote_apache_tika_0_4_release_candidate_2#d6f1899a85b2a45c
    for discussion on language detection.
    See http://www.apache.org/dist/lucene/tika/CHANGES-0.4.txt. (gsingers)

6. SOLR-1274: Added text serialization output for extractOnly (Peter Wolanin, gsingers)    